# rofi-plugin-rs

./: Cargo.toml  README.md
example/mullvad/: Cargo.toml
example/mullvad/src/: lib.rs
src/: action.rs  ffi.rs  generator.rs  lib.rs  macros.rs  mode.rs
