[package]
name = "rofi-plugin"
version = "0.1.0"
authors = ["Yaroslav Bolyukin <iam@lach.pw>"]
description = "Rust api for rofi plugins"
edition = "2018"
license = "MIT"

[dependencies]
log = "0.4.11"
env_logger = "0.7.1"
genawaiter = "0.99.1"
real_c_string = "0.1.1"
terminated = "1.0.0"

[workspace]
members = ["./example/mullvad"]
